--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "preston-portfolio",
   "version": "1.0.0",
+  "homepage": "https://michelleshu.github.io/preston-portfolio",
   "description": "Preston's art portfolio",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,8 @@
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.3",
+    "react-router-dom": "^7.6.3",
     "react-starfield": "^1.0.3"
   },
   "devDependencies": {
@@ -31,6 +36,7 @@
     "@babel/preset-react": "^7.27.1",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.99.9",
