--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
+    "react-social-icons": "^6.24.0",
     "react-starfield": "^1.0.3"
   },
   "devDependencies": {
