--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "react-social-icons": "^6.24.0",
-    "react-starfield": "^1.0.3"
+    "react-starfield": "^1.0.3",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.7",
